PROTON-2027: Make disconnect work like other wake mechanisms (eg. pn_connection_wake) and check for closing status.   Count disconnects correctly for competing closes.